--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-edition = "2021"
 name = "http-content-range"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
 repository = "https://github.com/nyurik/http-content-range"
 description = "HTTP Content Range response header parser"
 license = "MIT OR Apache-2.0"
+keywords = ["http", "headers", "content-range"]
+categories = ["network-programming", "web-programming::http-client"]
+edition = "2021"
