--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,11 @@ keywords = ["http", "headers", "content-range"]
 categories = ["network-programming", "web-programming::http-client"]
 edition = "2021"
 rust-version = "1.58.1"
+exclude = [
+    ".gitignore",
+    ".github/*",
+    "justfile",
+]
 
 [lints.rust]
 unsafe_code = "forbid"
