--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ unsafe_code = "forbid"
 unused_qualifications = "warn"
 
 [lints.clippy]
+cargo = { level = "warn", priority = -1 }
 pedantic = { level = "warn", priority = -1 }
