chore: update ci and justfile

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 keywords = ["http", "headers", "content-range"]
 categories = ["network-programming", "web-programming::http-client"]
-exclude = [
-    ".gitignore",
-    ".github/*",
-    "justfile",
-]
+exclude = [".gitignore", ".github/*", "justfile"]
 rust-version = "1.58"
 
 [lints.rust]
