--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,10 @@ unsafe_code = "forbid"
 unused_qualifications = "warn"
 
 [lints.clippy]
+# Restrictions
+panic_in_result_fn = "warn"
+todo = "warn"
+unwrap_used = "warn"
+# Pedantics without being too noisy
 cargo = { level = "warn", priority = -1 }
 pedantic = { level = "warn", priority = -1 }
